package com.example.oulearning.organization.application.hierarchy;

public interface AssignMemberUseCase {
    void execute(AssignMemberCommand command);
}
