package com.example.oulearning.organization.application.hierarchy;

public interface AssignOwnerUseCase {
    void execute(AssignOwnerCommand command);
}
