package com.example.oulearning.organization.application.hierarchy;

import com.example.oulearning.organization.domain.hierarchy.OrganizationalUnitId;

public record CreateOrganizationalUnitCommand(String name, OrganizationalUnitId parentId) {
}
