package com.example.oulearning.organization.application.hierarchy;

public interface RemoveMemberUseCase {
    void execute(RemoveMemberCommand command);
}
