package com.example.oulearning.organization.application.hierarchy;

public interface RemoveOwnerUseCase {
    void execute(RemoveOwnerCommand command);
}
